--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Typescript Eslint Ava Boilerplate",
   "main": "dist/index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=production node build",
+    "start:dev": "cross-env NODE_ENV=development node build",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn src",
     "build": "tsc",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --fix --ext .ts",
-    "test": "ava test/**/*.spec.ts"
+    "test": "ava test/**/*.spec.ts",
+    "coverage": "nyc yarn test",
+    "postcoverage": "nyc report --reporter=json"
   },
   "repository": {
     "type": "git",
@@ -21,13 +26,19 @@
   },
   "homepage": "https://github.com/marvin-j97/typescript-eslint-ava-template#readme",
   "devDependencies": {
-    "eslint-config-prettier": "^8.1.0",
-    "eslint": "^7.22.0",
-    "@types/node": "^14.14.35",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "ava": "^3.15.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
